--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Wedding Of DYAH & AJI</title>
 
+    <!-- OPEN GRAPH (Untuk preview WhatsApp, FB, IG) -->
+    <meta property="og:title" content="Undangan Pernikahan Dyah & Aji" />
+    <meta
+      property="og:description"
+      content="Silakan buka undangan pernikahan Dyah & Aji. Klik untuk melihat detail acara."
+    />
+    <meta
+      property="og:image"
+      content="https://hamdoserfina-lab.github.io/UndanganDyahAji/assets/cover-bg.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://hamdoserfina-lab.github.io/UndanganDyahAji/"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Untuk WhatsApp khusus -->
+    <meta name="twitter:card" content="summary_large_image" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
