--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Wedding Of DYAH & AJI</title>
 
-    <!-- OPEN GRAPH (Untuk preview WhatsApp, FB, IG) -->
+    <!-- ========== OPEN GRAPH AGAR PREVIEW MUNCUL DI WHATSAPP ========== -->
     <meta property="og:title" content="Undangan Pernikahan Dyah & Aji" />
     <meta
       property="og:description"
@@ -20,9 +20,8 @@
       content="https://hamdoserfina-lab.github.io/UndanganDyahAji/"
     />
     <meta property="og:type" content="website" />
-
-    <!-- Untuk WhatsApp khusus -->
     <meta name="twitter:card" content="summary_large_image" />
+    <!-- ================================================================ -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -36,6 +35,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
   </head>
+
   <body>
     <div class="hero-background">
       <div class="hero-bg-carousel">
