--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         />
         <meta
             property="og:image"
-            content="https://hamdoserfina-lab.github.io/UndanganDyahAji/assets/cover-bg.jpg"
+            content="https://hamdoserfina-lab.github.io/UndanganDyahAji/assets/hero-bg-1.jpg"
         />
         <meta
             property="og:url"
@@ -552,30 +552,30 @@
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
-    <script>
-      // Config Firebase Anda (ini sudah benar)
-      const firebaseConfig = {
-        apiKey: "AIzaSyDqFTzp0PNQORrEShOofAHawejevLwbyQg",
-        authDomain: "undangan-ojlo.firebaseapp.com",
-        projectId: "undangan-ojlo",
-        storageBucket: "undangan-ojlo.firebasestorage.app",
-        messagingSenderId: "293262307556",
-        appId: "1:293262307556:web:576e1b0d3b17e9dbf3bcf1",
-        measurementId: "G-B6BRP95W3S",
-      };
+        <script>
+            // Config Firebase Anda (ini sudah benar)
+            const firebaseConfig = {
+                apiKey: "AIzaSyDqFTzp0PNQORrEShOofAHawejevLwbyQg",
+                authDomain: "undangan-ojlo.firebaseapp.com",
+                projectId: "undangan-ojlo",
+                storageBucket: "undangan-ojlo.firebasestorage.app",
+                messagingSenderId: "293262307556",
+                appId: "1:293262307556:web:576e1b0d3b17e9dbf3bcf1",
+                measurementId: "G-B6BRP95W3S"
+            };
 
-      // Inisialisasi Firebase v8
-      firebase.initializeApp(firebaseConfig);
+            // Inisialisasi Firebase v8
+            firebase.initializeApp(firebaseConfig);
 
-      // Definisikan 'db' agar bisa diakses oleh script.js
-      const db = firebase.firestore();
-    </script>
+            // Definisikan 'db' agar bisa diakses oleh script.js
+            const db = firebase.firestore();
+        </script>
 
-    <script src="script.js"></script>
-  </body>
+        <script src="script.js"></script>
+    </body>
 </html>
