--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>The Wedding Of DYAH & AJI</title>
 
-        <!-- ========== OPEN GRAPH AGAR PREVIEW MUNCUL DI WHATSAPP ========== -->
         <meta property="og:title" content="Undangan Pernikahan Dyah & Aji" />
         <meta
             property="og:description"
@@ -21,8 +20,6 @@
         />
         <meta property="og:type" content="website" />
         <meta name="twitter:card" content="summary_large_image" />
-        <!-- ================================================================ -->
-
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -42,19 +39,19 @@
                 <div
                     class="bg-slide active"
                     style="
-                        background-image: url(&quot;assets/hero-bg-1.jpg&quot;);
+                        background-image: url('assets/hero-bg-1.jpg');
                     "
                 ></div>
                 <div
                     class="bg-slide"
                     style="
-                        background-image: url(&quot;assets/hero-bg-2.jpg&quot;);
+                        background-image: url('assets/hero-bg-2.jpg');
                     "
                 ></div>
                 <div
                     class="bg-slide"
                     style="
-                        background-image: url(&quot;assets/hero-bg-3.jpg&quot;);
+                        background-image: url('assets/hero-bg-3.jpg');
                     "
                 ></div>
             </div>
@@ -66,19 +63,19 @@
                     <div
                         class="bg-slide active"
                         style="
-                            background-image: url(&quot;assets/hero-bg-1.jpg&quot;);
+                            background-image: url('assets/hero-bg-1.jpg');
                         "
                     ></div>
                     <div
                         class="bg-slide"
                         style="
-                            background-image: url(&quot;assets/hero-bg-2.jpg&quot;);
+                            background-image: url('assets/hero-bg-2.jpg');
                         "
                     ></div>
                     <div
                         class="bg-slide"
                         style="
-                            background-image: url(&quot;assets/hero-bg-3.jpg&quot;);
+                            background-image: url('assets/hero-bg-3.jpg');
                         "
                     ></div>
                 </div>
