--- a/index.html
+++ b/index.html
@@ -44,12 +44,10 @@
 
     <section class="cover" id="cover">
       <div class="parallax-background">
-        <div class="hero-bg-carousel" id="coverCarousel">
-          <div class="bg-slide active bg-1"></div>
-          <div class="bg-slide bg-2"></div>
-          <div class="bg-slide bg-3"></div>
-        </div>
-      </div>
+  <div class="hero-bg-carousel"> <div class="bg-slide active bg-1"></div>
+  </div>
+</div>
+
 
       <div class="cover-content">
         <div class="cover-text">
@@ -70,12 +68,7 @@
         </button>
       </div>
 
-      <button class="cover-nav-btn prev" id="coverPrevBtn">
-        <i class="fas fa-chevron-left"></i>
-      </button>
-      <button class="cover-nav-btn next" id="coverNextBtn">
-        <i class="fas fa-chevron-right"></i>
-      </button>
+
     </section>
 
     <main class="main-content" id="mainContent">
